--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">404</h1>
+  <h1 class="page-heading"></h1>
   
   {{ content }}
 
