--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,10 @@
 <header class="site-header" role="banner">
-
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
-
-    {% include navigation.html %}
-
-  </div>
-
+    <div class="wrapper">
+        {% assign default_paths = site.pages | map: "path" %}
+        {% assign page_paths = site.header_pages | default: default_paths %}
+        <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        {% if page_paths %}
+            {% include navigation.html %}
+        {% endif %}
+    </div>
 </header>
