Trying to find the error

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,4 @@
-
+<!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML" async></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -7,7 +7,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/ga-lite@1/dist/ga-lite.min.js" async>
-	<script>
+	<script>-->
 var galite = galite || {};
 galite.UA = '{{ site.google_analytics }}'; 
 </script>
